# x_news_alert

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  SCHEMA.md  SKILL.md  agent.yaml  credentials.yaml.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml
references/: config.md  prompts.md
scripts/: config_loader.py  x_news_alert.py  xurl-token-check.py
tests/: test_core.py
x_news_alert/: __init__.py  cli.py  config_loader.py  models.py  output.py  tweets.py
