[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-news-alert"
version = "3.0.0"
description = "X/Twitter news alert automation - track bloggers and lists, send market-aware alerts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen2023", email = "xusongzi324@gmail.com"}
]
keywords = ["twitter", "x", "alert", "news", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
x = "scripts.x_news_alert:main"
x-news-alert = "scripts.x_news_alert:main"

[project.urls]
Homepage = "https://github.com/Allen2023/x-news-alert"
Documentation = "https://github.com/Allen2023/x-news-alert#readme"
Repository = "https://github.com/Allen2023/x-news-alert"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools.package-data]
scripts = ["*.md"]
