[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-news-alert"
version = "3.0.0"
description = "X/Twitter news alert automation - track bloggers and lists, send market-aware alerts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Allen2023", email = "xusongzi324@gmail.com"}
]
keywords = ["twitter", "x", "alert", "news", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
]

[project.scripts]
xna = "x_news_alert.cli:main"
x = "x_news_alert.cli:main"
x-news-alert = "x_news_alert.cli:main"

[project.urls]
Homepage = "https://github.com/Allen2023/x_news_alert"
Documentation = "https://github.com/Allen2023/x_news_alert#readme"
Repository = "https://github.com/Allen2023/x_news_alert"

[tool.setuptools.packages.find]
where = ["."]
include = ["x_news_alert*"]

[tool.setuptools.package-data]
x_news_alert = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
